@@ -17,6 +17,9 @@
 - Implemented feature #10166: Cache PO-definitions.
 - Implemented feature #9967: PersistentObject: getRelationQuery() method. This
   method is now called createRelationFindQuery() and is public now.
+- Implemented feature #9089: Make some methods public.
+  ezcPersistentSession->generateAliasMap() and ->getColumnsFromDefinition()
+  are public now.
 	
 	
 1.2 - Monday 18 December 2006
